fix: small alignment fix for 'experience' set default theme to 'material' (#14)
* style(experience): fix width css ruling to align text in cards

* style: set default style to 'material' not 'custom'

--- a/src/app/experience/experience-default/experience-default.component.scss
+++ b/src/app/experience/experience-default/experience-default.component.scss
@@ -11,7 +11,7 @@
 .experience-logo {
   margin: auto 20px auto 0;
   height: 200px;
-  width: 200px;
+  min-width: 200px;
   object-fit: cover;
 }
 
